--- a/src/css/reviews/reviews-header.css
+++ b/src/css/reviews/reviews-header.css
@@ -7,6 +7,12 @@
   background-size: cover;
   background-position: center;
   position: relative;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+.reviews-header-sec {
+  max-width: 2000px;
 }
 
 .reviews-header-container::before {
@@ -16,7 +22,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.9);
   z-index: -1;
 }
 
@@ -27,35 +32,11 @@
   margin-bottom: 1rem;
 }
 
-.reviews-slogan {
-  color: #666;
-  font-size: 1.5rem;
-  font-weight: 400;
-  margin-bottom: 1rem;
-}
-
 .reviews-content {
   color: #888;
   font-size: 1rem;
   margin-bottom: 2rem;
-}
-
-.review-platforms {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 30rem;
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-}
-
-.trustpilot-logo img{
-  height: 90px;
-  object-fit: contain;
-}
-.google-logo img{
-  height: 140px;
-  object-fit: contain;
+  font-size: 1.5rem;
 }
 
 @media (max-width: 768px) {
