--- a/src/css/ucat/ucat-hdiw.css
+++ b/src/css/ucat/ucat-hdiw.css
@@ -34,21 +34,8 @@
     font-size: 1.5rem;
     border-radius: 1rem;
     background-color: transparent;
-    border: 3px solid transparent;
+    border: 3px solid #0D2371;
     font-weight: 600;
-}
-
-#ucat-hdiw-btn-1 {
-    border-color: #0D2371;
     color: #0D2371;
-}
-
-#ucat-hdiw-btn-2 {
-    border-color: #FF3A3A;
-    color: #FF3A3A;
-}
-
-#ucat-hdiw-btn-3 {
-    border-color: #0C4DA2;
-    color: #0C4DA2;
+    white-space: pre;
 }
