another small page in ucat page

--- a/src/css/ucat/ucat-hdiw.css
+++ b/src/css/ucat/ucat-hdiw.css
@@ -39,3 +39,9 @@
     color: #0D2371;
     white-space: pre;
 }
+
+.ucat-hdiw-btn-row .btn:hover {
+    background-color: #0D2371;
+    color: white;
+    border-color: #0D2371;
+}
