--- a/src/css/aboutus/aboutus-end.css
+++ b/src/css/aboutus/aboutus-end.css
@@ -27,6 +27,7 @@
     justify-content: center;
     white-space: pre;
     margin-bottom: 5rem;
+    color: #0C4DA2;
 }
 
 .aboutus-end-slogan-bold {
@@ -42,6 +43,8 @@
     padding: 1rem 1rem;
     font-size: 1.5rem !important;
     transition: 0.3s ease-in-out !important;
+    white-space: pre;
+    width: fit-content !important;
 }
 
 #aboutus-end-btn-1 {
