--- a/src/css/interview/interview-price-grid.css
+++ b/src/css/interview/interview-price-grid.css
@@ -32,123 +32,139 @@
 
 
 .interview-price-grid {
-    grid-template-columns: 35% 30% 30%;
-    grid-template-rows: auto auto auto auto auto auto auto;
-    grid-column-gap: 1rem;
-    grid-row-gap: 0;
-    max-width: 1080px !important;
-  }
-  
-  .price-grid-heading-main {
-    flex-direction: column;
-    gap: .5rem;
-    border: 3px solid rgb(255, 58, 58);
-    border-radius: 1rem 1rem 0 0;
-    border-bottom: none;
-  }
-  
-  #gold-plan {
-    border-color: #CCAC00 !important;
-  }
+  grid-template-columns: 35% 20% 20%;
+  grid-template-rows:  auto auto auto auto auto auto auto auto auto auto auto auto !important;
+  grid-column-gap: 1rem;
+  grid-row-gap: 0;
+  max-width: 1080px !important;
+  place-content: center;
+}
 
-  
-  #executive-plan {
-    border-color: #062A78;
-  }
-  
-  .interview-price-grid-plan-price {
-    font-size: 3rem !important;
-    text-align: center;
-  }
 
-  .interview-price-grid-plan-price span {
-    font-size: 1rem !important;
-  }
-  
-  #plan-t-gold {
-    color: #CCAC00;
-  }
-  
-  #plan-t-executive {
+.interview-price-grid-header {
+  border: 3px solid transparent;
+  border-radius: 1rem 1rem 0 0;
+  border-bottom: none;
+  overflow: hidden;
+}
+
+.interview-price-grid-header .interview-price-grid-gold h3, 
+.interview-price-grid-header .interview-price-grid-gold .interview-price-grid-price-tag .interview-price-grid-amount, 
+.interview-price-grid-header .interview-price-grid-gold .interview-price-grid-price-tag .interview-price-grid-period {
+  color: #CCAC00;
+
+}
+
+
+.interview-price-grid-header .interview-price-grid-elite h3, 
+.interview-price-grid-header .interview-price-grid-elite .interview-price-grid-price-tag .interview-price-grid-amount, 
+.interview-price-grid-header .interview-price-grid-elite .interview-price-grid-price-tag .interview-price-grid-period {
     color: #0D2371;
-  }
-  
-  .interview-price-grid-plan-des {
-    font-size: 1.25rem !important;
-    text-align: center;
-    color: #6B7280;
-  }
-  
-  .plan-gs-btn {
-    border-radius: 1rem !important;
-    border: none !important;
-  }
-  
-  #plan-gs-gold-btn {
-    background-color: #CCAC00 !important;
-  }
-  
-  
-  #plan-gs-executive-btn {
-    background-color: #0D2371 !important;
-  }
-  
-  .plan-gs-btn {
-    width: fit-content;
-  }
-  
-  .grid-row-start-main {
-    flex-direction: column;
-    align-items: center;
-    padding: 2rem 0;
-  }
-  
-  .interview-price-grid-row-main-h {
-    font-size: 1.5rem;
-    color:  #333333;
-  }
-  
-  .grid-row-sub-h {
-    font-size: 1rem;
-    color: #6B7280;
-  }
-  
-  .grid-row-prices {
-    flex-direction: column;
-    align-items: center;
-    padding: 2rem 0;
-    border: 3px solid #CCAC00;
-    border-top: none;
-    border-bottom: none;
-  }
+}
 
-  .interview-price-grid-row-p-des {
-    text-align: center;
-  }
-  
-  
-  .grid-row-price {
-    font-weight: 800;
-  }
-  
-  #grid-gold-price {
-    color: #CCAC00;
-  }
-  
-  #grid-gold-price-des {
-    color: #867c4a;
-  }
-  
-  #grid-executive-price {
-    color: #062A78;
-  }
-  
-  #grid-executive-price-des {
-    color: #7493D8;
-  }
-  
-  .grid-bottom {
-    border-bottom: 3px solid !important;
-    border-radius: 0 0 1rem 1rem; 
-  }
 
+.interview-price-grid-header .interview-price-grid-gold .btn-primary {
+  background-color: #CCAC00 !important;
+  border: none;
+  border-radius: 1rem;
+  font-weight: 600;
+  padding: 0.75rem 1rem;
+}
+
+.interview-price-grid-price-tag .interview-price-grid-period {
+  font-size: 1rem;
+  color: #666;
+  font-weight: 500;
+}
+
+
+.interview-price-grid-header .interview-price-grid-elite .btn-primary {
+  background-color: #0D2371 !important;
+  border: none;
+  border-radius: 1rem;
+  font-weight: 600;
+  padding: 0.75rem 1rem;
+}
+
+.interview-price-grid-card {
+  padding: 2rem;
+  border-radius: 1.5rem;
+  transition: transform 0.2s ease;
+}
+
+.interview-price-grid-card:hover {
+  transform: translateY(-5px);
+}
+
+.interview-price-grid-card.interview-price-grid-gold {
+  background-color: #f7e2ab;
+  box-shadow: 0 10px 20px rgba(255, 224, 102, 0.1);
+}
+
+
+.interview-price-grid-card.interview-price-grid-elite {
+  background-color: #C7D3FF;
+  box-shadow: 0 10px 20px rgba(99, 102, 241, 0.1);
+}
+
+
+.interview-price-grid-card p {
+  font-size: .7rem;
+}
+
+.interview-price-grid-header .interview-price-grid-gold .btn-primary {
+  background-color: #CCAC00 !important;
+  border: none;
+  border-radius: 1rem;
+  font-weight: 600;
+  padding: 0.75rem 1rem;
+}
+
+.interview-price-grid-feature-title {
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 1rem;
+  text-align: center;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#interview-price-grid-gold {
+  border-color: #CCAC00;
+}
+
+#interview-price-grid-elite {
+  border-color: #0D2371;
+}
+
+.interview-price-grid-feature-content {
+  padding: 1rem;
+  text-align: center;
+  border-left: 3px solid transparent;
+  border-right: 3px solid transparent;
+  height: auto;
+}
+
+.interview-price-grid-feature-content-b {
+  border-bottom: 3px solid transparent;
+  border-radius: 0 0 1rem 1rem;
+}
+
+.interview-price-grid-card p {
+  font-size: 1rem;
+}
+
+.interview-price-grid-price-tag {
+  font-size: 2.5rem;
+  font-weight: 700;
+  line-height: 1;
+}
+
+.interview-price-grid-price-tag .interview-grid-period {
+  font-size: 1rem;
+  color: #666;
+  font-weight: 500;
+}
