--- a/src/css/snippets/navbar.css
+++ b/src/css/snippets/navbar.css
@@ -62,6 +62,12 @@ nav {
   margin-left: 0; */
 }
 
+#nav-me-dd {
+  margin-left: -5%;
+  /* mobile
+  margin-left: 0; */
+}
+
 .nav-item-drop-down {
   border-radius: 1rem !important;
   padding: 0 !important;
