--- a/src/css/ucat/ucat-price-grid.css
+++ b/src/css/ucat/ucat-price-grid.css
@@ -15,7 +15,7 @@
     max-width: 2000px !important;
 }
 
-.ucat-prce-grid-heading {
+.ucat-price-grid-heading {
     font-size: 3rem;
     font-weight: 800;
     color: #0D2371;
@@ -25,7 +25,7 @@
 }
 
 .ucat-price-grid {
-    grid-template-columns: 35% 20%;
+    grid-template-columns: 35% 20% ;
     grid-template-rows:  auto auto auto auto auto auto auto auto auto auto auto auto !important;
     grid-column-gap: 1rem;
     grid-row-gap: 0;
@@ -48,6 +48,7 @@
 
 }
 
+
 .ucat-price-grid-header .ucat-price-grid-gold .btn-primary {
     background-color: #CCAC00 !important;
     border: none;
@@ -55,6 +56,7 @@
     font-weight: 600;
     padding: 0.75rem 1rem;
 }
+
 
 .ucat-price-grid-card {
     padding: 2rem;
@@ -99,6 +101,7 @@
     border-color: #CCAC00;
 }
 
+
 .ucat-price-grid-feature-content {
     padding: 1rem;
     text-align: center;
@@ -122,7 +125,7 @@
     line-height: 1;
 }
 
-.ucat-price-grid-price-tag .pricing-price-grid-period {
+.ucat-price-grid-price-tag .ucat-price-grid-period {
     font-size: 1rem;
     color: #666;
     font-weight: 500;
