--- a/src/css/home/home-price-grid.css
+++ b/src/css/home/home-price-grid.css
@@ -3,7 +3,6 @@
   align-items: center;
   gap: 2rem;
   flex-direction: column;
-  background-color: #f8f9fa;
 }
 
 .homeprice-grid-title {
@@ -19,43 +18,57 @@
   justify-content: center;
 }
 
-.home-price-grid {
-  grid-template-columns: 35% 20% 20% 20%;
-  grid-template-rows: auto auto auto auto auto auto auto;
-  grid-column-gap: 1rem;
-  grid-row-gap: 0;
-  max-width: 1080px !important;
+.homeprice-grid-card {
+  border-radius: 2rem !important;
+  /* border: 2px solid transparent !important; */
+  transition: 0.3s ease-in-out;
 }
 
-.homeprice-grid-card {
-  border-radius: 1rem !important;
+.homeprice-grid-card:hover {
+  transform: translateY(-15px);
 }
+
 
 .homeprice-grid-gold {
   background-color: #f7e2ab !important;
+  border-color: #CCAC00 !important;
 }
 
 .homeprice-grid-gold .homeprice-grid-price {
   color: #CCAC00 !important;
   font-weight: 600;
+  padding: 1rem ;
+  border: 2px solid #CCAC00;
+  border-radius: 1rem;
+  background-color: white;
 }
 
 .homeprice-grid-platinum {
   background-color: #B0C0CA !important;
+  border-color: #3A4750 !important;
 }
 
 .homeprice-grid-platinum .homeprice-grid-price {
   color: #3A4750 !important;
   font-weight: 600;
+  padding: 1rem;
+  border: 2px solid #3A4750;
+  border-radius: 1rem;
+  background-color: white;
 }
 
 .homeprice-grid-elite {
   background-color: #C7D3FF !important;
+  border-color: #0D2371 !important;
 }
 
 .homeprice-grid-elite .homeprice-grid-price {
   color: #0D2371 !important;
   font-weight: 600;
+  padding: 1rem;
+  border: 2px solid #0D2371;
+  border-radius: 1rem;
+  background-color: white;
 }
 
 .home-pricing-plans .card-text {
@@ -78,19 +91,44 @@
   font-size: 1.25rem;
   font-weight: 600;
   border-radius: 1rem;
+  padding: 1rem 1.5rem;
 }
 
 .homeprice-grid-gold .btn-primary {
+  background-color: white;
+  border: 2px solid #CCAC00;
+  color: #CCAC00;
+}
+
+.homeprice-grid-gold .btn-primary:hover {
   background-color: #CCAC00;
-  border: none !important;
+  border: 2px solid #CCAC00;
+  color: white;
+  transform: scale(1.05)
 }
 
 .homeprice-grid-platinum .btn-primary {
+  background-color: white;
+  border: 2px solid #3A4750;
+  color: #3A4750;
+}
+
+.homeprice-grid-platinum .btn-primary:hover {
   background-color: #3A4750;
-  border: none !important;
+  border: 2px solid #3A4750;
+  color: white;
+  transform: scale(1.05)
 }
 
 .homeprice-grid-elite .btn-primary {
+  background-color: white;
+  border: 2px solid #0D2371;
+  color: #0D2371;
+}
+
+.homeprice-grid-elite .btn-primary:hover {
   background-color: #0D2371;
-  border: none !important;
+  border: 2px solid #0D2371;
+  color: white;
+  transform: scale(1.05)
 }
