--- a/src/css/pricing/pricing-hero.css
+++ b/src/css/pricing/pricing-hero.css
@@ -1,5 +1,8 @@
 #pricing-hero {
     justify-content: center;
+    background-image: url('/public/Images/site-images/com/site-top-sec.png');
+    background-repeat: no-repeat;
+    background-position-y: 5rem;
 }
 
 .pricing-hero-sec {
@@ -12,7 +15,7 @@
     background-color: #0D2371;
     display: flex;
     align-items: center;
-    padding: 4rem 0;
+    padding: 7rem 0;
     overflow: hidden;
 }
 
