--- a/src/css/interview/interview-hdiw.css
+++ b/src/css/interview/interview-hdiw.css
@@ -10,8 +10,15 @@
 
 .interview-hdiw-title {
     color: #16205b;
+    margin-bottom: 2rem;
+    font-size: 2.7rem;
 }
 
 .interview-hdiw-number {
     color: #f44336;
+}
+
+.interview-hdiw-step-text {
+    font-size: 1.125rem;
+    line-height: 1.7;
 }
