--- a/src/css/reviews/reviews-header.css
+++ b/src/css/reviews/reviews-header.css
@@ -9,6 +9,10 @@
   position: relative;
   justify-content: center;
   margin-bottom: 2rem;
+  background-image: url('/public/Images/site-images/com/site-top-new.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position-y: 10%;
 }
 
 .reviews-header-sec {
@@ -30,7 +34,9 @@
   font-size: 3rem;
   font-weight: 700;
   margin-bottom: 3rem;
+  margin-top: 20rem;
 }
+
 
 .reviews-content {
   color: #888;
