--- a/src/css/ucat/ucat-points.css
+++ b/src/css/ucat/ucat-points.css
@@ -5,7 +5,7 @@
 .ucat-points-main {
     display: flex;
     align-items: center;
-    padding: 6rem 0;
+    padding: 4rem 0;
     overflow: hidden;
 }
 
@@ -33,7 +33,7 @@
 }
 
 .ucat-points-image {
-    max-width: 90%;
+    transform: scale(0.8);
     height: auto;
 }
 
