--- a/src/css/ucat/ucat-price-grid.css
+++ b/src/css/ucat/ucat-price-grid.css
@@ -5,7 +5,7 @@
 .ucat-price-grid-main {
     display: flex;
     align-items: center;
-    padding: 6rem 0;
+    padding: 4rem 0;
     overflow: hidden;
 }
 
@@ -25,7 +25,7 @@
 }
 
 .ucat-price-grid {
-    grid-template-columns: 35% 20% ;
+    grid-template-columns: 35% 25% ;
     grid-template-rows:  auto auto auto auto auto auto auto auto auto auto auto auto !important;
     grid-column-gap: 1rem;
     grid-row-gap: 0;
@@ -86,7 +86,7 @@
 }
 
 .ucat-price-grid-feature-title {
-    font-size: 1.1rem;
+    font-size: 1.25rem;
     font-weight: 600;
     color: #333;
     margin-bottom: 1rem;
@@ -108,6 +108,12 @@
     border-left: 3px solid transparent;
     border-right: 3px solid transparent;
     height: auto;
+}
+
+.ucat-price-grid-feature-content p {
+    color: #4B5563;
+    font-size: 1.1rem;
+    line-height: 1.7;
 }
 
 .ucat-price-grid-feature-content-b {
