--- a/src/css/joinus/joinus-points.css
+++ b/src/css/joinus/joinus-points.css
@@ -3,8 +3,8 @@
 }
 
 .joinus-points-sec {
-    margin-top: 4rem !important; 
     max-width: 2000px !important;
+    padding: 2rem 0;
 }
 
 .joinus-points-title {
