--- a/src/css/joinus/joinus-qualities.css
+++ b/src/css/joinus/joinus-qualities.css
@@ -5,6 +5,7 @@
 .joinus-qualities-sec {
     justify-content: center;
     max-width: 2000px !important;
+    padding: 2rem 0;
 }
 
 .joinus-qualitiy {
