--- a/src/css/interview/interview-hdiw.css
+++ b/src/css/interview/interview-hdiw.css
@@ -4,8 +4,9 @@
 
 .interview-hdiw-sec {
     justify-content: center;
-    margin: 8rem 0 !important;
+    margin: 2rem 0 !important;
     max-width: 2000px !important;
+    margin-bottom: 4rem !important;
 }
 
 .interview-hdiw-title {
