--- a/src/css/b-friend/b-friend-hdiw.css
+++ b/src/css/b-friend/b-friend-hdiw.css
@@ -11,8 +11,9 @@
 
 .b-friend-hdiw-sec {
     justify-content: center;
-    margin: 10rem 0 0 !important;
+    margin: 2rem 0 0 !important;
     max-width: 2000px !important;
+    margin-bottom: 4rem !important;
 }
 
 .b-friend-hdiw-title {
