--- a/src/css/find-tutor/findt-hero.css
+++ b/src/css/find-tutor/findt-hero.css
@@ -1,6 +1,10 @@
 #findt-hero {
     justify-content: center;
     background-color: #0D2371;
+    background-image: url('/public/Images/site-images/com/site-top-sec.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position-y: 5rem;
 }
 
 
