--- a/src/css/find-tutor/findt-tutors.css
+++ b/src/css/find-tutor/findt-tutors.css
@@ -21,6 +21,7 @@
     transition: transform 0.2s, box-shadow 0.2s;
     border: 3px solid transparent;
     transition: 0.3s ease-in-out;
+    text-decoration: none;
 }
 
 .findt-tutors-card:hover {
