--- a/src/css/aboutus/aboutus-hero.css
+++ b/src/css/aboutus/aboutus-hero.css
@@ -10,23 +10,23 @@
     justify-content: center;
     margin: 20rem 0 !important;
     max-width: 2000px !important;
-    margin-bottom: 10rem !important;
-    transform: scale(140%);
+    margin-bottom: 4rem !important;
 }
 
 .aboutus-strive-logo {
-    transform: scale(45%);
-    margin-top: 2rem !important;
+    height: 600px;
+    width: auto;
+    transform: translateY(-2rem);
 }
 
 .aboutus-hero-main-h {
-    margin-top: -3rem !important;
+    transform: translateY(-10rem);
     justify-content: center;
     color: #0D2371;
     height: fit-content !important;
-    margin-top: 1rem !important;
 }
 
 .aboutus-hero-sub-h {
+    transform: translateY(-10rem);
     justify-content: center;
 }
