--- a/src/css/pricing/pricing-hero.css
+++ b/src/css/pricing/pricing-hero.css
@@ -15,7 +15,7 @@
     background-color: #0D2371;
     display: flex;
     align-items: center;
-    padding: 7rem 0;
+    padding-top: 7rem;
     overflow: hidden;
 }
 
