--- a/src/css/interview/interview-w-days.css
+++ b/src/css/interview/interview-w-days.css
@@ -42,7 +42,7 @@
 }
 
 .interview-w-days-th {
-    background-color: #FF3A3A;
+    background-color: #16205b;
     color: white;
     border: none;
     font-size: 1.5rem;
