--- a/src/css/b-friend/b-friend-price-grid.css
+++ b/src/css/b-friend/b-friend-price-grid.css
@@ -40,7 +40,8 @@
     border-radius: 0 0 1rem 1rem;
     height: 100%;
     flex-direction: column;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    align-items: center;
   }
   
   #plan-h-gold {
@@ -68,7 +69,7 @@
   }
   
   .plan-type {
-    font-size: 2rem !important;
+    font-size: 1.5rem !important;
   }
   
   #plan-t-gold {
