--- a/src/css/login-signup/login.css
+++ b/src/css/login-signup/login.css
@@ -2,7 +2,7 @@
 .login-container {
     min-height: 100vh;
     width: 100%;
-    /* background-image: url('/Images/backgrounds/classroom-background.jpg'); */
+    background-image: url('/public/Images/site-images/home/hero.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -14,7 +14,6 @@
 .login-overlay {
     width: 100%;
     min-height: 100vh;
-    background-color: rgba(13, 35, 113, 0.7);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -32,6 +31,7 @@
 .login-logo {
     height: 70px;
     margin-bottom: 1rem;
+    transform: scale(2.5);
 }
 
 .login-title {
@@ -119,10 +119,10 @@
 }
 
 .login-submit-btn {
-    background-color: #0D2371;
-    color: white;
-    padding: 0.75rem 1.5rem;
-    border-radius: 0.5rem;
+    background-color: #0D2371 !important;
+    color: white !important;
+    padding: 0.75rem 1.5rem !important;
+    border-radius: 1rem !important;
     font-weight: 600;
     transition: all 0.3s ease;
 }
